--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "SubclassParameter",
   "version": "0.1.0",
-  "homepage": "https://github.com/msdoom2011/subclassjs",
-  "repository": "git@github.com:msdoom2011/subclassjs.git",
-  "description": "The plugin for SubclassJS framework which brings ability to define parameters that will be available all over your SubclassJS application.",
+  "homepage": "https://github.com/msdoom2011/subclass-parameter",
+  "repository": "git@github.com:msdoom2011/subclass-parameter.git",
+  "description": "The plugin for SubclassJS framework which brings ability to define parameters that will be available all over your Subclass application.",
   "author": {
-    "name": "Dmitriy Osipishin",
+    "name": "Dmitry Osipishin",
     "email": "msdoom2011@gmail.com"
   },
-  "main": "Gruntfile.js",
+  "main": "release/subclass-parameter.js",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
